Desenvolvendo e salvando em cloud

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="produto"></div>
                 <div class="produto"></div>
                 <div class="produto"></div>
-                <div class="produto"><img src=""></div>
+                <div class="produto"></div>
                 <div class="produto"></div>
                 <div class="produto">9</div>
             </div>
