tentando Colocar imagens no quadrado

--- a/rwd/index.html
+++ b/rwd/index.html
@@ -22,15 +22,23 @@
             </header>
             <div id="carroussel"></div>
             <div class="row">
+                <div class="produto">
+                    <div class = "Pimg">
+                        <!--<img src="img/whiteMonkey.jpg" alt="WhiteMonkey">-->
+                        <img src="img/whiteMonkey.jpg" alt="WhiteMonkey">
+                        <div class="button">
+                            <a href="compras.html"><button>Comprar Macaco Branco</button></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="produto"><img src="img/monkey_hero.png" alt="monkeyHero"></div>
+                <div class="produto"><img src="img/smileMonkey.jpg" alt="SmileMonkey"></div>
+                <div class="produto"><img src="img/sagui.jpg" alt="SaguimonkeyBrazil"></div>
                 <div class="produto"></div>
                 <div class="produto"></div>
+                <div class="produto"><img src="img/maskeiko.jpg" alt="Mokey" title="B Monkey"></div>
                 <div class="produto"></div>
                 <div class="produto"></div>
-                <div class="produto"></div>
-                <div class="produto"></div>
-                <div class="produto"><img src=""></div>
-                <div class="produto"></div>
-                <div class="produto">9</div>
             </div>
             <footer>
                 <div class="row">
