Desenvolvendo os ponteiros do relogio

--- a/0708_Clock/index.html
+++ b/0708_Clock/index.html
@@ -8,17 +8,16 @@
 </head>
 <body>
     <div class="clock">
-        <div class="outer-clock-face"></div>
-        <div class="marking marking-five"></div>
-        <div class="marking marking-ten"></div>
-        <div class="marking marking-twenty"></div>
-        <div class="marking marking-twenty-five"></div>
-        <div class="inner-clock-face"></div>
-        <div class="hand hour-hand"></div>
-        <div class="hand min-hand"></div>
-        <div class="hand second-hand"></div>
-        
-        
+        <div class="outer-clock-face">
+            <div class="marking marking-five"></div>
+            <div class="marking marking-ten"></div>
+            <div class="marking marking-twenty"></div>
+            <div class="marking marking-twenty-five"></div>
+            <div class="inner-clock-face"></div>
+            <div class="hand hour-hand"></div>
+            <div class="hand min-hand"></div>
+            <div class="hand second-hand"></div>
+        </div>    
     </div>
 </body>
 </html>
